--- a/node/server/package.json
+++ b/node/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "queerallyear",
+  "name": "queerallyear_server",
   "description": "Node-based parts of the queerallyear.de website",
   "version": "0.1.0",
   "dependencies": {
