--- a/node/tool/package.json
+++ b/node/tool/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "dependencies": {
         "color": "^3.1.2",
-        "xml-js": "^1.6.11"
+        "jsdom": " ^15.1.1"
     },
     "scripts": {
         "start": "node queerallyear.js"
