Actually runable as cmd or in the browser, using different main files.

--- a/node/tool/package.json
+++ b/node/tool/package.json
@@ -6,6 +6,8 @@
         "jsdom": " ^15.1.1"
     },
     "scripts": {
-        "start": "node queerallyear.js"
-    }
+        "start": "node cmd.js"
+    },
+    "main" : "cmd.js",
+    "browser" : "browser.js"
 }
