--- a/node/server/package.json
+++ b/node/server/package.json
@@ -3,7 +3,8 @@
   "description": "Node-based parts of the queerallyear.de website",
   "version": "0.1.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsdom": " ^15.1.1"
   },
   "devDependencies": {}
 }
